--- a/listicle-style.css
+++ b/listicle-style.css
@@ -1,91 +1,92 @@
-/**
- TODO(you): Write the CSS necessary to complete HW1!
-*/
-
-*{
-    margin: 0;
-    padding: 0;
+body{
+    margin:0;
 }
-header{
-    background-image: linear-gradient(rgba(0, 0, 0, .3), rgba(0, 0, 0, .3)), url(../images/header.jpg);
-    background-repeat:no-repeat;
-    background-size: cover;
+header {   
+    background-image: url(../images/header.jpg);
     background-position: top;
+    background-size:cover;
+    background-repeat: no-repeat;    
     height: 500px;
-    background-attachment: fixed;
+    width: 100%; 
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
-header h2{
-  max-width: 780px;
-  font-family: Roboto  Slab, Serif;
-  font-size: 36px;
-  font-weight: normal;
-  color: white;
-  text-align: center;
-  position: relative;
-  top: 40%;
-  margin: 0 auto;
+header p{   
+    font-family:Roboto Slab, serif;
+    font-size: 36px;
+    font-weight: normal;
+    color: white;
+    text-align: center;
+    max-width: 780px;   
 }
 .profile{
-  text-align: center;
+    text-align: center;  
 }
 .profile img{
-  width: 100px;
-  margin-top: -50px;
-  border-radius: 100%;
-  border: 1px solid white;
+    height: 100px;
+    width: 100px;    
+    border-radius: 50px;
+    margin-top: -50px; 
+    border:1px solid white; 
 }
 .profile p{
-  display: inline-block;
-  font-family: Source Sans Pro,sans-serif;
-  font-size: 18px;
-  color: rgb(51,51,51)
-  line-weight: 24px;
-  border-bottom: 2px solid #e6e6e6;
-  padding-bottom: 10px;
-}
-.profile strong{
-  font-weight: bold;
-}
-.profile em{
-  font-style: italic;
+    display: inline-block;
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 18px;
+    color: rgb(51, 51, 51);
+    line-height: 24px;  
+    /*grey line*/
+    border-bottom-style: solid;
+    padding-bottom: 10px;
+    border-bottom-color: #e6e6e6;
+    border-width: 2px;
 }
 section{
     display: flex;
-    justify-content: center;
-    margin: 60px auto;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-between;
+    margin: 10px 0;
 }
-section span{
-    font-family: Roboto Slab, serif;
-    margin-right:40px;
-    font-size: 36px;
-    color:rgba(0, 0, 0, 0.25);
-    font-weight: normal;
+.region{
+    width: 66.67%;
 }
-section div{
-  width: 66.67%;
-}
-section h1{
+.heading{
+    position: relative;
+    right:22px;
     font-family: Roboto Slab, serif;
     font-size: 36px;
     font-weight: bold;
     color:rgb(51, 51, 51);
+    line-height: 0px;
 }
-section a{
-  font-family: Roboto Slab, serif;
-  color: #42b4d6;
-  margin-bottom: 20px;
-  text-decoration: none;
+span{
+    position: relative;
+    right:40px;
+    color:rgba(0, 0, 0, 0.25);
+    font-weight: normal;
 }
-section a:hover{
-  text-decoration: underline;
+.paragraphs{
+    font-family: Source Sans Pro, sans-serif;
+    font-size: 18px;
+    line-height:32px;
+    color:rgb(51, 51, 51);
+    position: relative;
+    top:-10px;
 }
-section p{
-  font-family: Source Sans Pro,sans-serif;
-  margin-bottom: 20px;
-  font-size: 18px;
-  line-height: 32px;
-  color: rgb(51,51,51);
+a{
+    color:#42b4d6;
+    font-weight: normal;    
+    text-decoration: none;
+    position:relative;
+    top:-10px;
+    margin-bottom:0px;
 }
-section img{
-  width: 100%;
+a:hover{
+    text-decoration: underline;
+}
+img.drink{
+    width:66.67%;   
+    margin-bottom: 120px; 
 }
