--- a/my-list-style.css
+++ b/my-list-style.css
@@ -1,62 +1,54 @@
-/**
- TODO(you): Write the CSS necessary to complete HW1!
-*/
-
-*{
-    margin: 0;
-    padding: 0;
+body{
+    margin:0px;
+    text-align: center;
 }
-header{
-    background-color: rgb(0,250,250);
-    background-size: cover;
-    background-position: top;
-    height: 500px;
-    background-attachment: fixed;
+nav{
+    background-color: lightskyblue;
+    height:60px;
+    display: flex;
+    font-weight: bold;
+    justify-content:flex-end;
+    align-items:center;
 }
-header h2{
-  font-family: Roboto  Slab, Serif;
-  font-size: 48px;
-  font-weight: normal;
-  color: Black;
-  text-align: center;
-  position: relative;
-  top: 250px;
+nav div{
+    position:relative;
+    right: 10px;
+    text-align: center;
+    height:25px;
+    width:150px;
+    font-family:Roboto Slab, serif;
+    color: grey;
+    margin-left:20px;
+    border-radius: 20px;
+    
+}
+.navi{
+    background-color: royalblue;
 }
 section{
-    display: flex;
-    justify-content: space-around;
-    margin: 60px auto;
+    float: left;
+    width:70%;
+    text-align: left;
 }
 section div{
-  width: 60%;
+    float: left;
 }
-section h1{
-    font-family: Roboto Slab, serif;
-    font-size: 36px;
-    font-weight: bold;
-    color:rgb(51, 51, 51);
+img{
+    float: left;
+    height: 300px;
+    width: 250px;    
+    margin: 40px;
 }
-section a{
-  font-family: Roboto Slab, serif;
-  color: #42b4d6;
-  margin-bottom: 20px;
-  text-decoration: none;
+.block{
+    margin:40px;   
 }
-section a:hover{
-  text-decoration: underline;
+h1{
+    display: block;
+    padding-top:50px;
+    margin:0;
+    height: 100px;
+    background-color: powderblue
 }
-section p{
-  font-family: Source Sans Pro,sans-serif;
-  margin-bottom: 20px;
-  font-size: 18px;
-  line-height: 32px;
-  color: rgb(51,51,51);
-}
-section img{
-  width: 50%;
-}
-section h4{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+h2{
+    color: cornflowerblue;
 }
