--- a/css/my-list-style.css
+++ b/css/my-list-style.css
@@ -1,3 +1,62 @@
 /**
- TODO(you): Add CSS for the list that you create yourself!
+ TODO(you): Write the CSS necessary to complete HW1!
 */
+
+*{
+    margin: 0;
+    padding: 0;
+}
+header{
+    background-color: rgb(0,250,250);
+    background-size: cover;
+    background-position: top;
+    height: 500px;
+    background-attachment: fixed;
+}
+header h2{
+  font-family: Roboto  Slab, Serif;
+  font-size: 48px;
+  font-weight: normal;
+  color: Black;
+  text-align: center;
+  position: relative;
+  top: 250px;
+}
+section{
+    display: flex;
+    justify-content: space-around;
+    margin: 60px auto;
+}
+section div{
+  width: 60%;
+}
+section h1{
+    font-family: Roboto Slab, serif;
+    font-size: 36px;
+    font-weight: bold;
+    color:rgb(51, 51, 51);
+}
+section a{
+  font-family: Roboto Slab, serif;
+  color: #42b4d6;
+  margin-bottom: 20px;
+  text-decoration: none;
+}
+section a:hover{
+  text-decoration: underline;
+}
+section p{
+  font-family: Source Sans Pro,sans-serif;
+  margin-bottom: 20px;
+  font-size: 18px;
+  line-height: 32px;
+  color: rgb(51,51,51);
+}
+section img{
+  width: 50%;
+}
+section h4{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
